[package]
name = "nvim-cat"
version = "0.1.0"
authors = ["Cheney Lin <lincheney@gmail.com>"]

[dependencies]
serde = "1.0.106"
rmp = "0.8.9"
rmp-serde = "0.14.3"
rmpv = { version = "0.4.4", features = ["with-serde"] }
libc = "0.2.69"
lazy_static = "1.4.0"
quick-error = "1.2.3"
nix = "0.17.0"

[dependencies.clap]
version = "2.33.0"
features = ["wrap_help"]
default-features = false
